--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 <textarea class="form-control" placeholder="任何想說的..." id="floatingTextarea"></textarea>
                 <label for="floatingTextarea">感謝您提供的寶貴想法！</label>
               </div>
-              <button type="submit" class="btn btn-outline-dark">Submit</button>
+              <button type="submit" class="btn btn-outline-dark">送出</button>
             </form>
           </th>
           <th scope="col">          </th>
